Hotfix ZeroconfServer not compiling due to type mismatch in params map (#129)